[package]
name = "tmrs"
version = "0.1.2"
edition = "2021"
authors = ["Alex Gompper <agompper@me.com>"]
license = "MIT"
description = "CLI utility to measure time performance of commands with things like averages"
readme = "readme.md"
homepage = "https://github.com/alxgmpr/tmrs"
repository = "https://github.com/alxgmpr/tmrs"
keywords = ["cli", "timing", "testing", "benchmarking"]
categories = ["command-line-utilities"]


[dependencies]
statistics = "0.4.1"
getopts = { version = "0.2.21", features = [] }
log = "0.4.20"
env_logger = "0.11.0"